# glance

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD_UPGRADE_PLAN.md  E2E_TEST_PLAN.md  MANIFEST.in  README.md  SKILL.md  install.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: test.yml
.superpowers/brainstorm/66241-1778048921/content/: approaches.html  current-state.html  gap-analysis.html  refined-arch.html
.superpowers/brainstorm/66241-1778048921/state/: server-stopped
.superpowers/brainstorm/70163-1778118542/content/: refined-arch.html  skill-design.html
.superpowers/brainstorm/70163-1778118542/state/: server-stopped
docs/: DEVLOG.md  component-contract.md
docs/superpowers/plans/: 2026-05-06-glance-v0.2.0.md
docs/superpowers/specs/: 2026-05-06-glance-openclaw-skill-design.md
examples/demo-data/: seed.py
examples/diary_logger/: SKILL.md
examples/diary_logger/scripts/: _calendar.py
examples/mood/: SKILL.md
examples/reminder/: SKILL.md
examples/reminder/scripts/: digest.py  stats.py
examples/reminder/tests/: test_reminder.py
glance/: __init__.py  cli.py
glance/core/: openclaw_cron.py
glance/core/auth/: __init__.py  google_oauth.py
glance/core/registry/: discover.py
glance/core/registry/tests/: test_discover.py
glance/core/storage/: db.py  migrations.py
glance/core/storage/tests/: test_migrations.py
glance/dashboard/: build.py  charts.py  load_chart_config.py  overview.py
glance/examples/demo-data/: README.md  seed.py
glance/examples/mit/: SKILL.md  chart.toml
glance/examples/mit/scripts/: log.py  stats.py  today_brief.py
glance/examples/mit/tests/: test_mit.py
glance/examples/mood/scripts/: log.py  stats.py
glance/examples/mood/tests/: test_mood.py
glance/examples/reminder/scripts/: log.py
glance/examples/reminder/tests/: test_reminder.py
glance/skills/diary_logger/: SKILL.md
glance/skills/diary_logger/scripts/: _calendar.py  log.py  stats.py
glance/skills/mit/: SKILL.md
glance/skills/mit/scripts/: log.py  prompt.py  stats.py  today_brief.py
glance/skills/mit/tests/: test_mit.py
glance/skills/mood/scripts/: log.py  prompt.py  stats.py
glance/skills/mood/tests/: test_mood.py
glance/skills/reminder/scripts/: digest.py  log.py  prompt.py  stats.py
glance/skills/reminder/tests/: test_reminder.py
glance/skills/scaffold_component/: SKILL.md
glance/skills/scaffold_component/scripts/: scaffold.py
glance/skills/scaffold_component/tests/: test_scaffold.py
glancely/core/: openclaw_cron.py
glancely/dashboard/: build.py  overview.py
glancely/examples/mit/scripts/: stats.py
glancely/examples/mood/: chart.toml
glancely/skills/scaffold_component/scripts/: scaffold.py
tests/: test_cli.py  test_dashboard_build.py  test_dashboard_charts.py
(+9 files in other folders)
